--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.6.5"
   },
   "devDependencies": {
     "eslint": "8.5.0",
