--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-multi-carousel": "^2.6.5"
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "eslint": "8.5.0",
