remove gh pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nhulston.github.io/",
+  "homepage": "https:nh//nhulston.github.io/",
   "name": "nhulston",
   "private": true,
   "scripts": {
